<resources>
    <string name="app_name">Moda Shop</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_moda">Welcome to Moda</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_create_account">Create account</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_create_your_account">Create your account</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="desc_already_have_account">Already have account?</string>
    <string name="action_back">Back</string>
    <string name="register_failed">Register failed!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="invalid_name">Invalid name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="header_highlight">Highlight</string>
    <string name="action_add_to_cart">Add to cart</string>
    <string name="desc_cart">Cart</string>
    <string name="desc_favorite">Favorite</string>
    <string name="action_sign_out">Sign out</string>
    <string name="desc_profile">Profile</string>
</resources>