<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".ui.home.home.products.detail.ProductDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_outline_image_50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="15dp">

            <ImageButton
                android:id="@+id/btnBack"
                style="@style/ButtonSecondaryLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_back"
                android:minWidth="50.dp"
                android:minHeight="45dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imgBtnCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_cart"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_shopping_cart_black_24" />

            <ImageButton
                android:id="@+id/imgBtnFavorite"
                style="@style/ButtonSecondaryLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_favorite"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:src="@drawable/ic_baseline_heart_black" />
        </LinearLayout>

    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15.dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:gravity="start"
            android:paddingVertical="3.dp"
            android:text="Something"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingVertical="5.dp"
            android:text="3.200.000"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/llBottom"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="5.dp"
            android:paddingVertical="5.dp"
            android:text="VND"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/llBottom"
            app:layout_constraintStart_toEndOf="@id/tvPrice" />

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <!--        <ImageButton-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"/>-->

            <Button
                android:id="@+id/btnAddToCart"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_add_to_cart"
                android:textAllCaps="true" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>